change loading screen

--- a/Sources/GameMP/GameMP.vcxproj.filters
+++ b/Sources/GameMP/GameMP.vcxproj.filters
@@ -35,7 +35,7 @@
     <ClCompile Include="LoadingHook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Map.cpp">
+    <ClCompile Include="LoadingScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SessionProperties.cpp">
