--- a/Sources/GameMP/GameMP.vcxproj
+++ b/Sources/GameMP/GameMP.vcxproj
@@ -265,7 +265,7 @@ copy $(OutDir)$(TargetName).map ..\..\Bin\$(Configuration)\ &gt;nul</Command>
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="LCDDrawing.cpp" />
     <ClCompile Include="LoadingHook.cpp" />
-    <ClCompile Include="LoadingScreen.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="SessionProperties.cpp" />
     <ClCompile Include="StdAfx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
